sway: rebind resizes

--- a/config/sway/keys.config
+++ b/config/sway/keys.config
@@ -49,22 +49,25 @@ bindsym $mod1+q focus child
 bindsym $mod3+q exit
 bindsym $mod1+j focus down
 bindsym $mod2+j move down
+bindsym $mod3+j resize grow height 25px
 bindsym $mod1+k focus up
 bindsym $mod2+k move up
+bindsym $mod3+k resize shrink height 25px
 
 
 # right
 bindsym $mod1+f focus mode_toggle
 # g
 bindsym $mod3+c reload
-bindsym $mod1+r mode "resize"
 bindsym $mod1+l focus right
 bindsym $mod2+l move right
+bindsym $mod3+l resize grow width 25px
 # /
 
 bindsym $mod1+d kill
 bindsym $mod1+h focus left
 bindsym $mod2+h move left
+bindsym $mod3+h resize shrink width 25px
 bindsym $mod1+t layout tabbed
 bindsym $mod1+n layout toggle split
 bindsym $mod1+s layout stacking
@@ -77,17 +80,4 @@ bindsym $mod1+m splith
 # v
 # z
 # \
-
-
-# modal
-mode "resize"
-{
-	bindsym h resize shrink width 25px
-	bindsym j resize grow height 25px
-	bindsym k resize shrink height 25px
-	bindsym l resize grow width 25px
-
-	bindsym Return mode "default"
-	bindsym Escape mode "default"
-}
 
