--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -1,33 +1,4 @@
-# Default cfg.yaml for way-displays.
-# Copy this to ~/.config/way-displays/cfg.yaml and edit it to your liking.
-
-
-# The default left to right order is simply the order in which the displays are
-# discovered.
-# Define your own.
-ORDER:
-  #- 'DP-2'
-  #- 'monitor description'
-  #- 'HDMI-1'
-
-
-# The default is to scale each display by DPI.
-# This may be disabled and scale 1 will be used, unless a SCALE has been
-# specified.
-AUTO_SCALE: TRUE
-
-
-# Auto scale may be overridden for each display.
+AUTO_SCALE: true
 SCALE:
-  - NAME_DESC: 'ASUS XG32V'
+  - NAME_DESC: ASUS XG32V
     SCALE: 1.25
-
-
-# Laptop displays usually start with eDP e.g. eDP-1. This may be overridden if
-# your laptop is different.
-#LAPTOP_DISPLAY_PREFIX: 'eDP'
-
-
-# One of: ERROR, WARNING, INFO (default), DEBUG
-#LOG_THRESHOLD: DEBUG
-
