--- a/root/etc/interception/udevmon.d/ergodox.yaml
+++ b/root/etc/interception/udevmon.d/ergodox.yaml
@@ -1,7 +1,7 @@
 - JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/interception/dual-function-keys/dfk.thumb-cluster.yaml | modifiertrainer | WAYLAND_DISPLAY=wayland-1 XDG_RUNTIME_DIR=/run/user/1000 DISPLAY=:0 XAUTHORITY=/home/alex/.Xauthority XDG_CACHE_HOME=/tmp selpaster | uinput -d $DEVNODE"
   DEVICE:
-    # cover both NKRO and 6KRO which sometimes appears after boot
-    NAME: "ZSA Technology Labs ErgoDox EZ.*"
+    # 6KRO only, use NKRO and no DFK for gaming
+    NAME: "ZSA Technology Labs ErgoDox EZ"
     EVENTS:
       EV_KEY: [ KEY_LEFTSHIFT ]
 
