sway: add more volume controls

--- a/config/sway/keys.config
+++ b/config/sway/keys.config
@@ -29,6 +29,9 @@ bindsym XF86AudioMicMute exec volmutemic
 # .
 # p
 # y
+bindsym $mod3+period exec vollowermic
+bindsym $mod3+p exec volraisemic
+bindsym $mod3+y exec volmutemic
 
 bindsym $mod1+o workspace number 2
 bindsym $mod2+o move container to workspace number 2
@@ -40,8 +43,10 @@ bindsym $mod1+e workspace number 3
 bindsym $mod2+e move container to workspace number 3
 bindsym $mod1+u workspace number 4
 bindsym $mod2+u move container to workspace number 4
+bindsym $mod3+u exec volraise
 bindsym $mod1+i workspace number 5
 bindsym $mod2+i move container to workspace number 5
+bindsym $mod3+i exec volmutemic
 
 # \
 bindsym $mod1+apostrophe focus parent
@@ -49,10 +54,11 @@ bindsym $mod1+q focus child
 bindsym $mod3+q exit
 bindsym $mod1+j focus down
 bindsym $mod2+j move down
-bindsym $mod3+j resize grow height 25px
+bindsym $mod3+j exec vollower
 bindsym $mod1+k focus up
 bindsym $mod2+k move up
-bindsym $mod3+k resize shrink height 25px
+bindsym $mod3+k exec volraise
+bindsym $mod3+x exec volmute
 
 
 # right
@@ -61,13 +67,11 @@ bindsym $mod1+f focus mode_toggle
 bindsym $mod3+c reload
 bindsym $mod1+l focus right
 bindsym $mod2+l move right
-bindsym $mod3+l resize grow width 25px
 # /
 
 bindsym $mod1+d kill
 bindsym $mod1+h focus left
 bindsym $mod2+h move left
-bindsym $mod3+h resize shrink width 25px
 bindsym $mod1+t layout tabbed
 bindsym $mod1+n layout toggle split
 bindsym $mod1+s layout stacking
@@ -79,4 +83,9 @@ bindsym $mod1+m splith
 # v
 # z
 # \
+
+bindsym $mod1+Left resize shrink width 10px
+bindsym $mod1+Down resize grow height 10px
+bindsym $mod1+Up resize shrink height 10px
+bindsym $mod1+Right resize grow width 10px
 
