sway: revert to minimal way-displays config

--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -1,72 +1,4 @@
-# Default cfg.yaml for way-displays.
-# Copy this to ~/.config/way-displays/cfg.yaml and edit it to your liking.
-
-
-# Arrange displays in a ROW (default, left to right) or a COLUMN (top to bottom)
-ARRANGE: COL
-
-# Align ROWs at the TOP (default), MIDDLE or BOTTOM
-# Align COLUMNs at the LEFT (default), MIDDLE or RIGHT
-ALIGN: RIGHT
-
-
-# The default ORDER is simply the order in which the displays are discovered.
-# Define your own.
-ORDER:
-  - AAAAA
-  - BBBBB
-  - CCCCC
-  - bbbbb
-  #- 'DP-2'
-  #- 'monitor description'
-  #- 'HDMI-1'
-
-
-# The default is to scale each display by DPI.
-# This may be disabled and scale 1 will be used, unless a SCALE has been specified.
-AUTO_SCALE: ON
-
-# Auto scale may be overridden for each display.
 SCALE:
-  - NAME_DESC: AAAAA
-    SCALE: 2
-  - NAME_DESC: BBBBB
-    SCALE: 1
-  - NAME_DESC: HDMI-A-1
-    SCALE: 2
-  - NAME_DESC: HDMI-A-1
-    SCALE: 1
-  #- NAME_DESC: 'monitor description'
-  #  SCALE: 1.75
-
-
-# Laptop displays usually start with eDP e.g. eDP-1. This may be overridden if
-# your laptop is different.
-LAPTOP_DISPLAY_PREFIX: 'eDPP'
-
-
-# Use the maximum refresh rate for resolution of the preferred mode.
-# Warning: this may result in an unusable display.
-MAX_PREFERRED_REFRESH:
-  - B
-  - C
-  - b
-  - A
-  #- 'monitor description'
-  - 'HDMI-A-1'
-
-
-# One of: ERROR, WARNING, INFO (default), DEBUG
-# LOG_THRESHOLD: WARNING
-# LOG_THRESHOLD: INFO
-LOG_THRESHOLD: DEBUG
-
-
-# Disable the specified displays.
-# To disable/enable on-the-fly see recipe: https://github.com/alex-courtis/way-displays#on-the-fly-recipes
-DISABLED:
-  - AAAAA
-  - BBBBB
-  - AAAAA
-  #- "eDP-1"
+  - NAME_DESC: ASUS XG32V
+    SCALE: 1.25
 
