--- a/config/sway/appearance.config
+++ b/config/sway/appearance.config
@@ -44,3 +44,5 @@ client.urgent           $base03 $base02 $base06 $base03 $base03
 client.placeholder      $base02 $base01 $base04 $base01 $base01
 client.background       $base00
 
+for_window [title="Bitwarden"] floating enable
+
