--- a/config/sway/config
+++ b/config/sway/config
@@ -53,3 +53,16 @@ smart_gaps on
 smart_borders on
 default_border normal 1
 
+
+# https://www.reddit.com/r/swaywm/comments/l9asbc/zoom_on_sway_what_settings_do_you_use/
+#
+# Zoom Meeting App
+#
+# Default for all windows is non-floating.
+#
+# For pop up notification windows that don't use notifications api
+for_window [app_id="zoom" title="^zoom$"] border none, floating enable
+# For specific Zoom windows
+for_window [app_id="zoom" title="^(Zoom|About)$"] border pixel, floating enable
+for_window [app_id="zoom" title="Settings"] floating enable, floating_minimum_size 960 x 700
+
