tmux: C-o toggle prefix in root session

--- a/tmux.conf
+++ b/tmux.conf
@@ -35,14 +35,15 @@ set-window-option -g wrap-search off
 unbind-key C-b
 set -g prefix C-a
 
-# use C-o to prefix nested sessions, invoking multiple times as needed
-bind-key C-o send-prefix
+# toggle root prefix https://gist.github.com/samoshkin/06e65f7f1c9b55d3fc7690b59d678734
+bind-key -T root C-o set prefix None \; set key-table no-prefix
+bind-key -T no-prefix C-o set -u prefix \; set -u key-table
 
 # enter copy mode
 bind-key a copy-mode
 
 # clear terminal
-bind-key -n C-l send-keys -R C-l
+bind-key -T root C-l send-keys -R C-l
 
 # clear terminal and scrollback
 bind-key C-l send-keys -R C-l \; clear-history
