browser is context dependent

--- a/config/sway/keys.config
+++ b/config/sway/keys.config
@@ -13,6 +13,7 @@ bindsym $mod1+Escape floating toggle
 bindsym $mod1+space fullscreen
 bindsym $mod1+Return exec exec alacritty > /dev/null 2>&1
 bindsym $mod2+Return exec exec browser > /dev/null 2>&1
+bindsym $mod2+space exec exec browser google-chrome-stable > /dev/null 2>&1
 
 
 # special
