way-displays scale tweaks

--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -1,4 +1,8 @@
+ARRANGE: ROW
+ALIGN: TOP
+AUTO_SCALE: TRUE
 SCALE:
   - NAME_DESC: ASUS XG32V
-    SCALE: 1.25
-
+    SCALE: 1
+  - NAME_DESC: Unknown 0x05EF
+    SCALE: 2
