--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -1,5 +1,9 @@
 ARRANGE: ROW
-ALIGN: TOP
+ALIGN: BOTTOM
+ORDER:
+  - Sharp Corporation 0x148D
+  - Unknown 0x05EF
+  - ASUS XG32V
 AUTO_SCALE: TRUE
 SCALE:
   - NAME_DESC: ASUS XG32V
