--- a/root/etc/interception/udevmon.d/ka2.yaml
+++ b/root/etc/interception/udevmon.d/ka2.yaml
@@ -1,4 +1,4 @@
-- JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/interception/dual-function-keys/dfk.thumb-cluster.yaml | modifiertrainer | WAYLAND_DISPLAY=wayland-1 XDG_RUNTIME_DIR=/run/user/1000 selpaster | uinput -d $DEVNODE"
+- JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/interception/dual-function-keys/dfk.thumb-cluster.yaml | WAYLAND_DISPLAY=wayland-1 XDG_RUNTIME_DIR=/run/user/1000 selpaster | uinput -d $DEVNODE"
   DEVICE:
     NAME: "Kinesis Advantage2 Keyboard"
     EVENTS:
