sway: switch to workspace after moving container

--- a/config/sway/keys.config
+++ b/config/sway/keys.config
@@ -1,5 +1,5 @@
 set $mod1 Mod1
-Set $mod2 Mod1+Ctrl
+set $mod2 Mod1+Ctrl
 set $mod3 Mod1+Ctrl+Shift
 
 
@@ -34,19 +34,19 @@ bindsym $mod3+period exec vollowermic
 bindsym $mod3+p exec volraisemic
 bindsym $mod3+y exec volmutemic
 
-bindsym $mod1+o workspace number 2
-bindsym $mod2+o move container to workspace number 2
 bindsym $mod1+a workspace number 1
-bindsym $mod2+a move container to workspace number 1
+bindsym $mod2+a move container to workspace number 1; workspace 1
 bindsym $mod1+at workspace number 0
-bindsym $mod2+at move container to workspace number 0
+bindsym $mod2+at move container to workspace number 0; workspace 0
+bindsym $mod1+o workspace number 2
+bindsym $mod2+o move container to workspace number 2; workspace 2
 bindsym $mod1+e workspace number 3
-bindsym $mod2+e move container to workspace number 3
+bindsym $mod2+e move container to workspace number 3; workspace 5
 bindsym $mod1+u workspace number 4
-bindsym $mod2+u move container to workspace number 4
+bindsym $mod2+u move container to workspace number 4; workspace 4
 bindsym $mod3+u exec volraise
 bindsym $mod1+i workspace number 5
-bindsym $mod2+i move container to workspace number 5
+bindsym $mod2+i move container to workspace number 5; workspace 5
 bindsym $mod3+i exec volmutemic
 
 # \
