gigantor display layout

--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -4,6 +4,7 @@ ORDER:
   - Sharp Corporation 0x148D
   - Unknown 0x05EF
   - ASUS XG32V
+  - Ancor Communications Inc ROG PG27AQ
 AUTO_SCALE: TRUE
 SCALE:
   - NAME_DESC: ASUS XG32V
