beets: use a staging location

--- a/config/beets/config.yaml
+++ b/config/beets/config.yaml
@@ -1,3 +1,9 @@
+# - create empty ~/music-beets
+# - import
+# - twiddle
+# - move to ~/.music
+# - rm -rf ~/music/beets ~/.config/beets/musiclibrary.db ~/.config/beets/state.pickle
+#
 # import:
 #   beet import ~/Downloads/NewAlbum
 #
@@ -6,7 +12,7 @@
 #   beet modify album:"Once More 'Round The Sun" title:"Once More ’Round The Sun" track:4 title="Once More 'Round The Sun"
 #
 # detect art in FLAC:
-#   metaflac --list .music/Mastodon/Blood\ Mountain/01\ The\ Wolf\ Is\ Loose.flac | grep "type: 6 (PICTURE)"
+#   metaflac --list music-beets/Mastodon/Blood\ Mountain/01\ The\ Wolf\ Is\ Loose.flac | grep "type: 6 (PICTURE)"
 #
 # embed art:
 #   beet fetchart Blood Mountain
@@ -45,7 +51,7 @@ plugins:
   - embedart
   - permissions
 
-directory: ~/.music
+directory: ~/music-beets
 library: ~/.config/beets/musiclibrary.db
 
 import:
