mangohud: trim appearance

--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -1,14 +1,20 @@
-frametime=off
+cpu_stats=0
+gpu_stats=0
+fps=1
+frame_timing=1
 
-font_size=28
+font_size=32
 font_file=/usr/share/fonts/TTF/Hack-Regular.ttf
 
-position=top-right
-offset_x = 18
-offset_y = 0
-cellpadding_y=0.2
+engine_color=020202
+text_color=AAAAAA
+frametime_color=00AA00
 
-table_columns=2
+position=top-right
+offset_x=24
+offset_y=0
+cellpadding_y=0.4
 
 toggle_hud=F6
-
+ 
+# vim: set filetype=sh :
