tmux: allow lurking sessions, tweak some keybindings to match

--- a/tmux.conf
+++ b/tmux.conf
@@ -35,8 +35,9 @@ set-window-option -g wrap-search off
 unbind-key C-b
 set -g prefix C-a
 
-# use C-o to prefix nested sessions, invoking multiple times as needed
-bind-key C-o send-prefix
+# create a lurking session
+bind-key d run-shell 'tm-lurk'
+bind-key D detach-client
 
 # enter copy mode
 bind-key a copy-mode
@@ -45,10 +46,14 @@ bind-key a copy-mode
 bind-key -n C-l send-keys -R C-l
 
 # clear terminal and scrollback
-bind-key C-l send-keys -R C-l \; clear-history
+bind-key \' send-keys -R C-l \; clear-history
 
 # vi copypasta mode
 set-window-option -g mode-keys vi
+
+# sensible session switching
+bind-key i choose-tree -Zs
+bind-key x switch-client -l
 
 # X clipboard integration fails over ~91kB in alacritty and st.
 # Pipe out to xsel wherever possible, but still enable the integration for ones we can't e.g. copy-line
@@ -65,8 +70,8 @@ bind-key -T copy-mode-vi Y send-keys -X copy-line
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --input --clipboard"
 
 # cwd to X selection; xsel will run in the background until another process wants to put to X sel
-bind-key -T prefix C-u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
+bind-key -T prefix u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
 
 # spawn alacritty at cwd; unset TMUX so that .zshrc will exec it
-bind-key -T prefix C-e run-shell -b "TMUX= /bin/zsh -c \"cd \\\"#{pane_current_path}\\\" ; term &\""
+bind-key -T prefix e run-shell -b "TMUX= /bin/zsh -c \"cd \\\"#{pane_current_path}\\\" ; term &\""
 
