--- a/config/mako/config
+++ b/config/mako/config
@@ -1,1 +1,10 @@
-default-timeout=3000
+default-timeout=6000
+
+font=monospace 11
+border-size=1
+
+# base16 bright; cannot use environment variables
+text-color=#f5f5f5
+background-color=#505050
+border-color=#b0b0b0
+
