mangohud: show gpu and align

--- a/config/MangoHud/MangoHud.conf
+++ b/config/MangoHud/MangoHud.conf
@@ -1,19 +1,23 @@
 cpu_stats=0
-gpu_stats=0
+cpu_temp=1
+gpu_stats=1
+gpu_temp=1
 fps=1
 frame_timing=1
 
 font_size=32
 font_file=/usr/share/fonts/TTF/Hack-Regular.ttf
 
+gpu_color=020202
+cpu_color=020202
 engine_color=020202
 text_color=AAAAAA
 frametime_color=00AA00
 
 position=top-right
-offset_x=24
+offset_x=16
 offset_y=0
-cellpadding_y=0.4
+cellpadding_y=0.2
 
 toggle_hud=F6
  
