monitor: MAG274QRF-QD force 120Hz

--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -11,3 +11,8 @@ SCALE:
     SCALE: 1
   - NAME_DESC: Unknown 0x05EF
     SCALE: 2
+MODE:
+  - NAME_DESC: MAG274QRF-QD CA8A271A00352
+    WIDTH: 2560
+    HEIGHT: 1440
+    HZ: 120
