monitor: MAG274QRF-QD force scale 1 for intellij

--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -11,6 +11,8 @@ SCALE:
     SCALE: 1
   - NAME_DESC: Unknown 0x05EF
     SCALE: 2
+  - NAME_DESC: MAG274QRF-QD CA8A271A00352
+    SCALE: 1
 MODE:
   - NAME_DESC: MAG274QRF-QD CA8A271A00352
     WIDTH: 2560
