nginx: listen to localhost only

--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -3,7 +3,7 @@ events {
 
 http {
     server {
-        listen       8008;
+        listen       localhost:8008;
         server_name  localhost;
 
         location / {
