keyboard: alts -> metas, before_consume on all DFKs

--- a/root/etc/interception/dual-function-keys/dfk.thumb-cluster.yaml
+++ b/root/etc/interception/dual-function-keys/dfk.thumb-cluster.yaml
@@ -6,24 +6,30 @@ MAPPINGS:
   - KEY: KEY_BACKSPACE
     TAP: KEY_BACKSPACE
     HOLD: KEY_LEFTSHIFT
+    HOLD_START: BEFORE_CONSUME
 
   - KEY: KEY_SPACE
     TAP: KEY_SPACE
     HOLD: KEY_RIGHTSHIFT
+    HOLD_START: BEFORE_CONSUME
 
   - KEY: KEY_TAB
     TAP: KEY_TAB
-    HOLD: KEY_LEFTALT
+    HOLD: KEY_LEFTMETA
+    HOLD_START: BEFORE_CONSUME
 
   - KEY: KEY_DELETE
     TAP: KEY_DELETE
-    HOLD: KEY_RIGHTALT
+    HOLD: KEY_RIGHTMETA
+    HOLD_START: BEFORE_CONSUME
 
   - KEY: KEY_ESC
     TAP: KEY_ESC
     HOLD: KEY_LEFTCTRL
+    HOLD_START: BEFORE_CONSUME
 
   - KEY: KEY_ENTER
     TAP: KEY_ENTER
     HOLD: KEY_RIGHTCTRL
+    HOLD_START: BEFORE_CONSUME
 
