keyboard: alts/shift-caps toggle layout

--- a/root/etc/X11/xorg.conf.d/90-keyboard.conf
+++ b/root/etc/X11/xorg.conf.d/90-keyboard.conf
@@ -8,5 +8,5 @@ Section "InputClass"
 	Option "XkbVariant" "dvp,"
 
 	# man xkeyboard-config
-	Option "XkbOptions" "caps:escape,grp:win_space_toggle"
+	Option "XkbOptions" "caps:escape,grp:alts_toggle,grp:shift_caps_toggle"
 EndSection
