--- a/config/beets/config.yaml
+++ b/config/beets/config.yaml
@@ -1,6 +1,7 @@
-# - create empty ~/music-beets
+# - mkdir ~/music-beets
 # - import, use --noautotag for compilations/various artists
 # - twiddle
+# - beet write
 # - move to ~/.music
 # - rm -rf ~/music-beets ~/.config/beets/musiclibrary.db ~/.config/beets/state.pickle
 #
