tmux: change lurking bindings and don't detach

--- a/tmux.conf
+++ b/tmux.conf
@@ -36,8 +36,7 @@ unbind-key C-b
 set -g prefix C-a
 
 # create a lurking session
-bind-key d run-shell 'tm-lurk'
-bind-key D detach-client
+bind-key D run-shell 'tm-lurk'
 
 # enter copy mode
 bind-key a copy-mode
