--- a/tmux.conf
+++ b/tmux.conf
@@ -71,6 +71,8 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --input --cli
 # cwd to X selection; xsel will run in the background until another process wants to put to X sel
 bind-key -T prefix u run-shell "echo -n '#{pane_current_path}' | sed -e 's/ /\\\ /g' | xsel --input --primary"
 
-# spawn alacritty at cwd; unset TMUX so that .zshrc will exec it
-bind-key -T prefix e run-shell -b "TMUX= /bin/zsh -c \"cd \\\"#{pane_current_path}\\\" ; term &\""
+# spawn terminal at cwd
+# unset TMUX so that we get a new session
+# -b causes server to own process so explicitly disown
+bind-key -T prefix e run-shell "cd '#{pane_current_path}' ; TMUX= term > /dev/null 2>&1 &\! ; exit 0"
 
