--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -4,7 +4,7 @@
     <alias>
         <family>monospace</family>
         <prefer>
-            <family>Hack</family>
+            <family>Hack Nerd Font</family>
         </prefer>
     </alias>
 </fontconfig>
