--- a/tmux.conf
+++ b/tmux.conf
@@ -31,9 +31,10 @@ set -s escape-time 0
 # search
 set-window-option -g wrap-search off
 
-# use screen ctrl-A prefix
+# use screen ctrl-A prefix with ctrl-B as backup when remoting
 unbind-key C-b
 set -g prefix C-a
+set -g prefix2 C-b
 
 # create a lurking session
 bind-key D run-shell 'tm-lurk'
