waybar: copy river window title on click

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -18,7 +18,8 @@
 	"river/window": {
 		// truncates when it hits slstatus if a value is set
 		"max-length": 999,
-		"tooltip": false
+		"tooltip": false,
+		"on-click": "wl-copy $(lswt -j | jq -r 'map(select(.activated)) | first | .title')"
 	},
 
 	"custom/slstatus": {
