--- a/local/share/applications/slack.wayland.desktop
+++ b/local/share/applications/slack.wayland.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
-Name=Slack WebRTC
+Name=Slack Wayland
 StartupWMClass=Slack
 Comment=Slack Desktop
 GenericName=Slack Client for Linux
-Exec=/usr/bin/slack --enable-features=WebRTCPipeWireCapturer -s %U
+Exec=/usr/bin/slack --enable-features=UseOzonePlatform,WebRTCPipeWireCapturer --ozone-platform=wayland -s %U
 Icon=slack
 Type=Application
 StartupNotify=true
