--- a/config/beets/config.yaml
+++ b/config/beets/config.yaml
@@ -1,9 +1,8 @@
-# - mkdir ~/music-beets
+# - rm -rf ~/music-beets ~/.config/beets/musiclibrary.db ~/.config/beets/state.pickle ; ~/music-beets
 # - import, use --noautotag for compilations/various artists
 # - twiddle
 # - beet write
 # - move to ~/.music
-# - rm -rf ~/music-beets ~/.config/beets/musiclibrary.db ~/.config/beets/state.pickle
 #
 # import:
 #   beet import ~/Downloads/NewAlbum
