duke display finally has a name

--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -9,7 +9,7 @@ AUTO_SCALE: TRUE
 SCALE:
   - NAME_DESC: ASUS XG32V
     SCALE: 1
-  - NAME_DESC: Unknown 0x05EF
+  - NAME_DESC: LG Display 0x05EF
     SCALE: 2
   - NAME_DESC: MAG274QRF-QD CA8A271A00352
     SCALE: 1
