--- a/config/stylua.toml
+++ b/config/stylua.toml
@@ -3,3 +3,6 @@ line_endings = "Unix"
 indent_type = "Spaces"
 indent_width = 2
 quote_style = "AutoPreferDouble"
+no_call_parentheses = false
+call_parentheses = "Always"
+collapse_simple_statement = "Never"
