--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -2,6 +2,18 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
     <alias>
+        <family>serif</family>
+        <prefer>
+            <family>Inter</family>
+        </prefer>
+    </alias>
+    <alias>
+        <family>sans-serif</family>
+        <prefer>
+            <family>Inter</family>
+        </prefer>
+    </alias>
+    <alias>
         <family>monospace</family>
         <prefer>
             <family>Hack Nerd Font</family>
