font: serif: amasis

--- a/config/fontconfig/fonts.conf
+++ b/config/fontconfig/fonts.conf
@@ -4,7 +4,7 @@
     <alias>
         <family>serif</family>
         <prefer>
-            <family>Inter</family>
+            <family>amasis</family>
         </prefer>
     </alias>
     <alias>
@@ -16,7 +16,13 @@
     <alias>
         <family>monospace</family>
         <prefer>
-            <family>Hack Nerd Font</family>
+            <family>Hack Nerd Font Mono</family>
+        </prefer>
+    </alias>
+    <alias>
+        <family>amasis</family>
+        <prefer>
+            <family>AmasisMTW1G</family>
         </prefer>
     </alias>
 </fontconfig>
