--- a/config/way-displays/cfg.yaml
+++ b/config/way-displays/cfg.yaml
@@ -17,3 +17,6 @@ MODE:
   - NAME_DESC: MAG274QRF-QD CA8A271A00352
     WIDTH: 2560
     HEIGHT: 1440
+  - NAME_DESC: GIGA-BYTE TECHNOLOGY CO., LTD. M28U 21490B006081
+    MAX: TRUE
+
