--- a/config/waybar/config
+++ b/config/waybar/config
@@ -2,7 +2,7 @@
 	"position": "top",
 
 	"modules-left": ["river/tags", "river/layout", "river/window"],
-	"modules-right": ["battery", "pulseaudio", "custom/slstatus", "tray"],
+	"modules-right": ["battery", "pulseaudio", "custom/slstatus", "cpu", "clock", "tray"],
 
 	"fixed-center": false,
 
@@ -20,12 +20,6 @@
 		"max-length": 999,
 		"tooltip": false,
 		"on-click": "wl-copy -p $(lswt -j | jq -r 'map(select(.activated)) | first | .title')"
-	},
-
-	"custom/slstatus": {
-		"exec": "slstatus -s",
-		"tooltip": false,
-		"on-click-right": "bell"
 	},
 
 	"pulseaudio": {
@@ -61,6 +55,26 @@
 		"format-discharging-low": "{capacity}% {time}   ",
 		"format-discharging-critical": "{capacity}% {time} {power}W   ",
 		"format-time": "{H}:{m}",
+	},
+
+	"custom/slstatus": {
+		"exec": "slstatus -s",
+		// extra space is always appended; newline?
+		"format": "{}  ",
+		"tooltip": false,
+		"on-click-right": "bell"
+	},
+
+	"cpu": {
+		"tooltip": false,
+		"interval": 5,
+		"format": "{load}   "
+	},
+
+	"clock": {
+		"tooltip": false,
+		"interval": 1,
+		"format": "{:%a %d %b %H:%M:%S} ",
 	}
 }
 
