waybar: add network-duke

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -23,6 +23,7 @@
 	},
 
 	"network": {
+		"tooltip": false,
 		"interface": "wlp0s20f3",
 		"format": "",
 		"format-disconnected": "┃ {ifname} disconnected ",
