--- a/config/waybar/config
+++ b/config/waybar/config
@@ -1,8 +1,26 @@
 {
 	"position": "top",
 
-	"modules-left": ["river/tags", "river/layout", "river/window"],
-	"modules-right": ["network", "pulseaudio", "battery", "custom/slstatus", "memory", "cpu", "clock", "tray"],
+	"modules-left": [
+		"river/tags",
+		"river/layout",
+		"river/window"
+	],
+	"modules-right": [
+		// problem
+		"network",
+		"disk#run",
+		"disk#tmp",
+		// exceptional
+		"pulseaudio",
+		"battery",
+		// normal
+		"custom/slstatus",
+		"memory",
+		"cpu",
+		"clock",
+		"tray"
+	],
 
 	"fixed-center": false,
 
@@ -18,23 +36,56 @@
 	"river/window": {
 		// truncates when it hits slstatus if a value is set
 		"max-length": 999,
+
+		"on-click": "wl-copy -p $(lswt -j | jq -r 'map(select(.activated)) | first | .title')",
+
 		"tooltip": false,
-		"on-click": "wl-copy -p $(lswt -j | jq -r 'map(select(.activated)) | first | .title')"
 	},
 
 	"network": {
-		"tooltip": false,
 		"interface": "wlp0s20f3",
+		"interval": 30,
+
 		"format": "",
 		"format-disconnected": "│ {ifname} disconnected ",
+
+		"tooltip": false,
+	},
+
+	"disk#run": {
+		"path": "/run/user/1000",
+		"interval": 30,
+
+		"states": {
+			"warn": 30,
+		},
+
+		"format": "",
+		"format-warn": "│ /run/user/1000 {percentage_used}% ",
+
+		"tooltip": false,
+	},
+
+	"disk#tmp": {
+		"path": "/tmp",
+		"interval": 30,
+
+		"states": {
+			"warn": 50,
+		},
+
+		"format": "",
+		"format-warn": "│ /tmp {percentage_used}% ",
+
+		"tooltip": false,
 	},
 
 	"pulseaudio": {
-		"tooltip": false,
 		"states": {
 			"full": 100,
 			"mid": 99,
 		},
+
 		"format":       "{format_source}│ V {volume}% ",
 		"format-full":  "{format_source}",
 		"format-mid":   "{format_source}│ V {volume}% ",
@@ -48,15 +99,18 @@
 		"on-scroll-up": "volraise",
 		"on-scroll-down": "vollower",
 		"on-click-middle": "pavucontrol",
+
+		"tooltip": false,
 	},
 
 	"battery": {
-		"tooltip": false,
-		"interval": 30,
+		"interval": 5,
+
 		"states": {
 			"low": 50,
 			"critical": 25
 		},
+
 		"format": "",
 		"format-charging": "│ {capacity}% ({time}) ",
 		"format-discharging-low": "│ {capacity}% {time} ",
@@ -67,34 +121,43 @@
 		"on-click-right": "volmutemic",
 		"on-scroll-up": "volraise",
 		"on-scroll-down": "vollower",
+
+		"tooltip": false,
 	},
 
 	"custom/slstatus": {
 		"exec": "slstatus -s",
-		"tooltip": false,
 
 		"on-click": "volmute",
 		"on-click-right": "volmutemic",
 		"on-scroll-up": "volraise",
 		"on-scroll-down": "vollower",
+
+		"tooltip": false,
 	},
 
 	"memory": {
-		"tooltip": false,
 		"interval": 5,
+
 		"format": "│ {percentage}% {swapPercentage}% ",
+
+		"tooltip": false,
 	},
 
 	"cpu": {
-		"tooltip": false,
 		"interval": 5,
+
 		"format": "│ {load} ",
+
+		"tooltip": false,
 	},
 
 	"clock": {
-		"tooltip": false,
 		"interval": 1,
+
 		"format": "│ {:%a %d %b %H:%M:%S} ",
+
+		"tooltip": false,
 	}
 }
 
