--- a/config/waybar/config
+++ b/config/waybar/config
@@ -39,7 +39,7 @@
 
 		"on-click": "wl-copy -p $(lswt -j | jq -r 'map(select(.activated)) | first | .title')",
 
-		"tooltip": false,
+		"tooltip": false
 	},
 
 	"network": {
@@ -49,7 +49,7 @@
 		"format": "",
 		"format-disconnected": "│ {ifname} disconnected ",
 
-		"tooltip": false,
+		"tooltip": false
 	},
 
 	"disk#run": {
@@ -57,13 +57,13 @@
 		"interval": 30,
 
 		"states": {
-			"warn": 30,
+			"warn": 30
 		},
 
 		"format": "",
 		"format-warn": "│ /run/user/1000 {percentage_used}% ",
 
-		"tooltip": false,
+		"tooltip": false
 	},
 
 	"disk#tmp": {
@@ -71,19 +71,19 @@
 		"interval": 30,
 
 		"states": {
-			"warn": 50,
+			"warn": 50
 		},
 
 		"format": "",
 		"format-warn": "│ /tmp {percentage_used}% ",
 
-		"tooltip": false,
+		"tooltip": false
 	},
 
 	"pulseaudio": {
 		"states": {
 			"full": 100,
-			"mid": 99,
+			"mid": 99
 		},
 
 		"format":       "{format_source}│ V {volume}% ",
@@ -100,7 +100,7 @@
 		"on-scroll-down": "vollower",
 		"on-click-middle": "pavucontrol",
 
-		"tooltip": false,
+		"tooltip": false
 	},
 
 	"battery": {
@@ -122,7 +122,7 @@
 		"on-scroll-up": "volraise",
 		"on-scroll-down": "vollower",
 
-		"tooltip": false,
+		"tooltip": false
 	},
 
 	"custom/slstatus": {
@@ -133,7 +133,7 @@
 		"on-scroll-up": "volraise",
 		"on-scroll-down": "vollower",
 
-		"tooltip": false,
+		"tooltip": false
 	},
 
 	"memory": {
@@ -141,7 +141,7 @@
 
 		"format": "│ {percentage}% {swapPercentage}% ",
 
-		"tooltip": false,
+		"tooltip": false
 	},
 
 	"cpu": {
@@ -149,7 +149,7 @@
 
 		"format": "│ {load} ",
 
-		"tooltip": false,
+		"tooltip": false
 	},
 
 	"clock": {
@@ -157,7 +157,7 @@
 
 		"format": "│ {:%a %d %b %H:%M:%S} ",
 
-		"tooltip": false,
+		"tooltip": false
 	}
 }
 
