--- a/config/waybar/config.template
+++ b/config/waybar/config.template
@@ -8,10 +8,9 @@
     "river/window"
   ],
   "modules-center": [
-    // problem
+    // "network#duke",
     "disk#run",
     "disk#tmp",
-    "network",
   ],
   "modules-right": [
     // exceptional
@@ -33,12 +32,10 @@
     "num-tags": 10
   },
   "river/window": {
-    // truncates when it hits slstatus if a value is set
-    "max-length": 999,
     "on-click": "wl-copy -p $(lswt -j | jq -r 'map(select(.activated)) | first | .title')",
     "tooltip": false
   },
-  "network": {
+  "network#duke": {
     "interface": "wlp0s20f3",
     "interval": 30,
     "format": "",
